<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.gweep</groupId>
	<artifactId>voting</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
			<maven.compiler.target>11</maven.compiler.target>
			<maven.compiler.source>11</maven.compiler.source>
			<lombok.version>1.18.22</lombok.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>